# github-project

./: Cargo.toml  README.md  TODO
.github/: CODEOWNERS
.github/workflows/: autodeploy-aws.yml  release-please.yml
src/: main.rs  main.rs.tmp2
src/infrastructure/: mod.rs  temp.json
src/infrastructure/github/: github_repository.rs  mod.rs  models.rs
src/infrastructure/github/graphql/: mod.rs  query_issues.rs  query_project.rs
src/infrastructure/mongodb/: issue_model.rs  issue_repository.rs  mod.rs  project_model.rs  project_repository.rs  snapshot_model.rs  snapshot_repository.rs
src/utils/: env.rs  mod.rs  string_to_bson_datetime.rs
