[package]
name = "github-project"
version = "0.1.0"
edition = "2021"
authors = ["Joel Alvarez Mexía"]
description = "A simple GitHub API client"
repository = "https://github.com/jeresoftx/github-project"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15"
mongodb = "3.2.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
anyhow = "1.0.98"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
